# rnn-playground

./: FF.md  INSTRUCT.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: tiny.txt
rnn-playground/src/rnn_playground/: __main__.py
rnn-playground/src/rnn_playground/utils/: __init__.py  fileloader.py
src/rnn_playground/: __main__.py  play.py
src/rnn_playground/utils/: __init__.py  fileloader.py  parser.py
