[project]
name = "rnn-playground"
version = "0.1.0"
description = "RNN sandbox for MIT Intro to Deep Learning labs"
authors = [
    { name = "Kiernan Beresford", email = "beresford.kiernan@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["rnn", "deep-learning", "mit", "dl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["numpy>=1.26", "torch>=2.3", "tqdm>=4.66", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
    "pre-commit>=3.7",
]

[tool.poetry]
packages = [{ include = "rnn_playground", from = "src" }]

[project.scripts]
rnn-play = "rnn_playground.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
